@@ -1,3 +1,6 @@
+2012-01-18  Seiko Epson Corporation <linux-printer@epson.jp>
+	* db/source/printer/Epson-WF-7018.xml: Added a new printer.xml
+
 2011-12-27  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
 	* db/source/printer/Epson-LP-S3200.xml: Added a new printer.xml
 
